# Autonomous-Secure-AI-Operations-Center

./: .gitignore  README.md
a-soc/: .coverage  .dockerignore  .env.example  .gitleaks.toml  .snyk  .trivyignore  AGENTS.md  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  Makefile  README.md  SECURITY.md  alembic.ini  api.py  docker-compose.monitoring.yml  docker-compose.override.yml  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml  requirements-lock.txt  requirements.txt
a-soc/.github/workflows/: ci-cd.yml
a-soc/agents/base/: agent.py  message.py
a-soc/agents/compliance/: compliance_agent.py
a-soc/agents/detection/: detection_agent.py
a-soc/agents/forensics/: forensics_agent.py
a-soc/agents/notifications/: notification_agent.py
a-soc/agents/response/: response_agent.py
a-soc/agents/supervisor/: supervisor_agent.py
a-soc/agents/telemetry/: cloud_providers.py  telemetry_agent.py
a-soc/alembic/: env.py
a-soc/alembic/versions/: 001_initial.py
a-soc/core/: auth.py  checks.py  circuit_breaker.py  rate_limiter.py  router.py  tracing.py  vault.py
a-soc/core/config/: __init__.py  settings.py
a-soc/core/database/: __init__.py  connection.py  event_store.py
a-soc/core/llm/: __init__.py  providers.py
a-soc/core/logging/: __init__.py  structured_logger.py
a-soc/core/memory/: __init__.py  event_store.py
a-soc/core/message_bus/: __init__.py  redis_bus.py
a-soc/core/mitre/: mapper.py
a-soc/core/orchestration/: workflow.py
a-soc/core/retry/: __init__.py  retry_async.py
a-soc/core/vector/: pinecone_provider.py
a-soc/dashboard/: .dockerignore  Dockerfile  TECH_DECISIONS.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json
a-soc/dashboard/app/: globals.css  layout.tsx  page.tsx
a-soc/dashboard/components/: AgentGrid.tsx  ApprovalModal.tsx  AttackGraph.tsx  BlastRadiusGraph.tsx  ErrorBoundary.tsx  LoadingSpinner.tsx  PageLoader.tsx  Shell.tsx  Sidebar.tsx  StatCard.tsx  TerminalFeed.tsx  ThreatHunting.tsx  TopBar.tsx
a-soc/dashboard/contexts/: AuthContext.tsx
a-soc/dashboard/hooks/: useThreatFeed.ts
a-soc/dashboard/lib/: api.ts  config.ts  utils.ts
a-soc/data/: events.jsonl
a-soc/docs/: AGENT_DESIGN.md  ARCHITECTURE.md  TECH_DECISIONS.md
a-soc/guardrails/policies/: action_policy.rego  asoc_policies.rego  policy_test.rego
a-soc/guardrails/risk_scoring/: scorer.py
a-soc/k8s/: backend.yaml
a-soc/monitoring/: alerting-rules.yml  loki.yml  prometheus.yml  promtail.yml
a-soc/scripts/: backup-postgres.sh  setup-git-hooks.sh
a-soc/src/asoc/: __main__.py  worker.py
a-soc/src/asoc/api/: app.py  (+2 more)
a-soc/tests/: conftest.py  test_agents.py  test_agents_refactored.py  test_api.py  test_auth.py  test_circuit_breaker.py  test_cloud_providers.py  test_event_store.py  test_graph_integration.py  test_health.py  test_hunting.py  test_llm_providers.py  test_logging.py  test_mitre.py  test_notifications.py  test_rate_limiter.py  test_risk_scoring.py  test_supervisor_advanced.py  test_vector.py  test_workflow.py
(+77 files in other folders)
