[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "a-soc"
version = "0.1.0"
description = "Autonomous Secure AI Operations Center"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "pydantic-settings",
    "langgraph",
    "boto3",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
