[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "a-soc"
version = "0.1.0"
description = "Autonomous Secure AI Operations Center"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",
    "langgraph",
    "langchain-openai",
    "langchain-anthropic",
    "boto3",
    "aiofiles",
    "httpx",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = [
    "asyncio: mark test as async",
]

[tool.coverage.run]
source = ["agents", "core", "guardrails"]
omit = ["*/__init__.py", "tests/*", "api.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
